2001-04-03  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	don't build and install xselection, there is a more powerful package
	of the same name

2001-03-24  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-desktop.1:
	* fvwm-menu-desktop.in:
	rewordings

2001-03-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert.1:
	updated

	* fvwm24_convert.in:
	use \s instead of [ \t]
	removed conversion of placement names, print a message instead
	print warnings about FvwmConfig and FvwmPipe
	improved comment detection
	detect continuation lines
	fixed typo
	fixed line continuations
	do not merge continuation lines if possible

2001-03-23  olicha  <olivier.chapuis@free.fr>

	* fvwm-menu-desktop.in:
	* fvwm-menu-desktop.1:
	New option --merge-user-menu for KDE version 2
	New options --check-[mini-]icons to fix problems if no icons
	are found for the styles

2001-03-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert.in (line):
	fixed HilightColor conversion
	added HilightColorset conversion
	convert WindowShadeAnimate command

2001-03-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert.in (line):
	enhanced button panel line recognition

2001-03-21  Dan Espen  <dane@mk.telcordia.com>

	* fvwm24_convert.in: Add detection of old style FvwmButtons panel
	definitions.

2000-03-20  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-config.in:
	added --fvwm-exe option for potential forward compatibility

	* fvwm-menu-desktop.1:
	* fvwm-menu-desktop.in:
	* fvwm-menu-directory.1:
	* fvwm-menu-directory.in:
	* fvwm-menu-xlock.1:
	* fvwm-menu-xlock.in:
	be compatible with a new wm-icons-0.3.0 icon list

	* fvwm-menu-headlines.1:
	simply regenerated with a new fancy perl-5.6.0 man page format

2001-03-18  Dan Espen  <dane@mk.telcordia.com>

	* make_fvwmdist.sh: Add instruction to increase release number in FAQ.
	* fvwm24_convert.in: Changes in GlobalOpts conversions.

2001-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert.in (line):