@@ -1,3 +1,7 @@
+2001-04-09  Dan Espen  <dane@mk.telcordia.com>
+
+	* make_fvwmdist.sh: Figure our user full name.
+
 2001-04-03  Mikhael Goikhman  <migo@homemail.com>
 
 	* Makefile.am:
